@@ -1,0 +1,6 @@
+include *.rst
+include *.txt
+
+recursive-include src *
+
+global-exclude *.pyc
